Fixed the table attributes to not overflow

--- a/assets/css/scrumboard.css
+++ b/assets/css/scrumboard.css
@@ -608,3 +608,7 @@
   font-size: 18px;
   font-weight: 700;
 }
+
+.w-table {
+  overflow-x: unset;
+}
